--- a/app/back/DOCKERFILE
+++ b/app/back/DOCKERFILE
@@ -8,6 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5000
 
-ENV NAME World
-
-CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
+CMD ["python", "app.py"]
