--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     image: anouk1234/myapp:v1.0  
     ports:
       - "8080:5000" 
-
-
+    environment:
+      CURRENT_ENVIRONMENT: development
